Store all upload ids for a case
